rns-lang/tests/snapshots/err-lexer-directives-dot_module.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.module
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/dot_module.ja:1:1 ]
   │
 1 │ .module
   │ ───┬───  
   │    ╰───── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
